# sonoff-minir3-rs

./: Cargo.toml  README.md
.github/workflows/: publish.yaml  test.yaml
src/: client.rs  lib.rs  models.rs
testing_fixtures/: request_startups_ok.json  request_switches_ok.json  response_error.json  response_info_ok.json  response_ok.json
