[package]
name = "sonoff-minir3-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.23"

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
httpmock = "0.6"
rstest = "0.18.2"
