[package]
name = "sonoff-minir3"
version = "0.1.0"
edition = "2021"
authors = ["Nikita Sivakov <sivakov512@icloud.com>"]
license-file = "LICENSE"
description = "Sonoff mini R3 API client"
repository = "https://github.com/sivakov512/sonoff-minir3-rs"
readme = "README.md"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.23"

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
httpmock = "0.6"
jsonxf = "1.1"
rstest = "0.18.2"
