[package]
name = "sonoff-minir3"
version = "0.1.0"  # VERSION_ANCHOR
edition = "2021"
authors = ["Nikita Sivakov <sivakov512@icloud.com>"]
license = "MIT"
description = "Sonoff mini R3 API client"
repository = "https://github.com/sivakov512/sonoff-minir3-rs"
readme = "README.md"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.23.2"

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
httpmock = "0.7"
jsonxf = "1.1"
rstest = "0.19.0"
